--- a/ui/Launcher.ui
+++ b/ui/Launcher.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>fairwindsk::ui::Launcher</class>
- <widget class="QWidget" name="fairwindsk::ui::Launcher">
+ <class>Launcher</class>
+ <widget class="QWidget" name="Launcher">
   <property name="geometry">
    <rect>
     <x>0</x>
