--- a/ui/about/About.ui
+++ b/ui/about/About.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>fairwindsk::ui::about::About</class>
- <widget class="QWidget" name="fairwindsk::ui::about::About">
+ <class>About</class>
+ <widget class="QWidget" name="About">
   <property name="windowModality">
    <enum>Qt::ApplicationModal</enum>
   </property>
