--- a/ui/launcher/Launcher.ui
+++ b/ui/launcher/Launcher.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -64,7 +64,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>1120</width>
+          <width>1158</width>
           <height>531</height>
          </rect>
         </property>
