Updates to make them working (just project setup operations)

--- a/resources.qrc
+++ b/resources.qrc
@@ -27,6 +27,7 @@
 
         <file>resources/images/icons/fairwind_icon.png</file>
         <file>resources/images/icons/apps_icon.png</file>
+        <file>resources/images/icons/webapp-256x256.png</file>
 
 
 	
