--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -61,7 +61,14 @@ color: rgb(255, 255, 255);</string>
        <widget class="QWidget" name="widget_Top" native="true"/>
       </item>
       <item>
-       <widget class="QStackedWidget" name="stackedWidget_Center"/>
+       <widget class="QStackedWidget" name="stackedWidget_Center">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QWidget" name="widget_Bottom" native="true"/>
