--- a/ui/topbar/TopBar.ui
+++ b/ui/topbar/TopBar.ui
@@ -145,6 +145,20 @@ color: rgb(250, 255, 255);</string>
       </layout>
      </item>
      <item>
+      <layout class="QVBoxLayout" name="verticalLayout_MOB">
+       <item>
+        <widget class="QToolButton" name="toolbutton_MOB">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
+         </property>
+         <property name="text">
+          <string>MOB</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
       <spacer name="horizontalSpacer_Sx">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -207,22 +221,25 @@ color: rgb(250, 255, 255);</string>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_6">
        <item>
-        <widget class="QLabel" name="label_TextInfo">
+        <widget class="QLabel" name="label_TextBRG">
          <property name="styleSheet">
           <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
          </property>
          <property name="text">
-          <string>Info</string>
+          <string>BRG</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_Info">
+        <widget class="QLabel" name="label_BRG">
          <property name="styleSheet">
           <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
          </property>
          <property name="text">
-          <string>--</string>
+          <string>--.--</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
@@ -231,22 +248,25 @@ color: rgb(250, 255, 255);</string>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_7">
        <item>
-        <widget class="QLabel" name="label_TextBearing">
+        <widget class="QLabel" name="label_TextDTG">
          <property name="styleSheet">
           <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
          </property>
          <property name="text">
-          <string>Bearing</string>
+          <string>DTG</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_Bearing">
+        <widget class="QLabel" name="label_DTG">
          <property name="styleSheet">
           <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
          </property>
          <property name="text">
           <string>--.--</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
@@ -254,6 +274,33 @@ color: rgb(250, 255, 255);</string>
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_8">
+       <item>
+        <widget class="QLabel" name="label_TextXTE">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
+         </property>
+         <property name="text">
+          <string>XTE</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_XTE">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgba(255, 255, 255, 0);</string>
+         </property>
+         <property name="text">
+          <string>--.--</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_9">
        <item>
         <widget class="QLabel" name="label_TextVMG">
          <property name="styleSheet">
@@ -271,6 +318,9 @@ color: rgb(250, 255, 255);</string>
          </property>
          <property name="text">
           <string>--.--</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
