--- a/ui/Settings.ui
+++ b/ui/Settings.ui
@@ -6,87 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>370</width>
-    <height>340</height>
+    <width>786</width>
+    <height>504</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Settings</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="2" column="1">
-    <widget class="QPushButton" name="pushButton_connect">
-     <property name="text">
-      <string>Connect</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QPushButton" name="pushButton_restart">
-     <property name="text">
-      <string>Restart</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <layout class="QGridLayout" name="gridLayout">
-     <property name="horizontalSpacing">
-      <number>-1</number>
-     </property>
-     <item row="2" column="2">
-      <widget class="QLineEdit" name="lineEdit_username">
-       <property name="text">
-        <string>admin</string>
+   <item row="0" column="0">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QTabWidget" name="tabWidget">
+       <property name="currentIndex">
+        <number>0</number>
        </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
-      <widget class="QComboBox" name="comboBox_signalkserverurl">
-       <property name="editable">
-        <bool>true</bool>
-       </property>
-       <property name="currentText">
-        <string notr="true">http://localhost:3000</string>
-       </property>
-       <item>
-        <property name="text">
-         <string notr="true">http://localhost:3000</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="label_password">
-       <property name="text">
-        <string>Password</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLabel" name="label_signalkserverurl">
-       <property name="text">
-        <string>Signal K Server URL</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="2">
-      <widget class="QLineEdit" name="lineEdit_password">
-       <property name="text">
-        <string>password</string>
-       </property>
-       <property name="echoMode">
-        <enum>QLineEdit::PasswordEchoOnEdit</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLabel" name="label_username">
-       <property name="text">
-        <string>Username</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
+       <widget class="QWidget" name="tab_main">
+        <attribute name="title">
+         <string>Main</string>
+        </attribute>
+        <layout class="QGridLayout" name="gridLayout_1">
+            <item row="0" column="1">
       <widget class="QLabel" name="label_virtualkeyboard">
        <property name="text">
         <string>Use Virtual Keyboard</string>
@@ -100,21 +40,126 @@
        </property>
       </widget>
      </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="tab_connection">
+        <attribute name="title">
+         <string>Connection</string>
+        </attribute>
+        <layout class="QGridLayout" name="gridLayout_3">
+         <item row="2" column="1">
+          <widget class="QPushButton" name="pushButton_connect">
+           <property name="text">
+            <string>Connect</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QPushButton" name="pushButton_restart">
+           <property name="text">
+            <string>Restart</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <layout class="QGridLayout" name="gridLayout">
+           <property name="horizontalSpacing">
+            <number>-1</number>
+           </property>
+           <item row="2" column="2">
+            <widget class="QLineEdit" name="lineEdit_username">
+             <property name="text">
+              <string>admin</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QComboBox" name="comboBox_signalkserverurl">
+             <property name="editable">
+              <bool>true</bool>
+             </property>
+             <property name="currentText">
+              <string notr="true">http://localhost:3000</string>
+             </property>
+             <item>
+              <property name="text">
+               <string notr="true">http://localhost:3000</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QLabel" name="label_password">
+             <property name="text">
+              <string>Password</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLabel" name="label_signalkserverurl">
+             <property name="text">
+              <string>Signal K Server URL</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="2">
+            <widget class="QLineEdit" name="lineEdit_password">
+             <property name="text">
+              <string>password</string>
+             </property>
+             <property name="echoMode">
+              <enum>QLineEdit::PasswordEchoOnEdit</enum>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QLabel" name="label_username">
+             <property name="text">
+              <string>Username</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="1" column="1">
+          <widget class="QTextEdit" name="textEdit_message">
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QPushButton" name="pushButton_stop">
+           <property name="text">
+            <string>Stop</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="tab_signalk">
+        <attribute name="title">
+         <string>Signal K</string>
+        </attribute>
+       </widget>
+       <widget class="QWidget" name="tab_apps">
+        <attribute name="title">
+         <string>Apps</string>
+        </attribute>
+       </widget>
+      </widget>
+     </item>
+     <item>
+      <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="standardButtons">
+        <set>QDialogButtonBox::Discard|QDialogButtonBox::Reset|QDialogButtonBox::RestoreDefaults|QDialogButtonBox::Save</set>
+       </property>
+       <property name="centerButtons">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
-   </item>
-   <item row="1" column="1">
-    <widget class="QTextEdit" name="textEdit_message">
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QPushButton" name="pushButton_stop">
-     <property name="text">
-      <string>Stop</string>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
