--- a/ui/Settings.ui
+++ b/ui/Settings.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>709</width>
-    <height>597</height>
+    <width>613</width>
+    <height>548</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,27 +20,12 @@
    <string notr="true"/>
   </property>
   <layout class="QGridLayout" name="gridLayout_Settings">
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
-   <property name="spacing">
-    <number>0</number>
-   </property>
    <item row="0" column="0">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>2</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="tab_main">
         <attribute name="title">
@@ -59,21 +44,6 @@
             <string>Units</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_Units">
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <property name="spacing">
-             <number>0</number>
-            </property>
             <item row="0" column="0">
              <widget class="QLabel" name="label_Units_BoatSpeed">
               <property name="text">
@@ -297,21 +267,6 @@
             <string>Devices</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_Devices">
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <property name="spacing">
-             <number>0</number>
-            </property>
             <item row="0" column="0">
              <widget class="QLabel" name="label_virtualkeyboard">
               <property name="text">
@@ -443,21 +398,6 @@
             <string>Paths</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_2">
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <property name="spacing">
-             <number>0</number>
-            </property>
             <item row="0" column="0">
              <widget class="QScrollArea" name="scrollArea_SignalK">
               <property name="sizePolicy">
@@ -477,8 +417,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>653</width>
-                 <height>480</height>
+                 <width>509</width>
+                 <height>417</height>
                 </rect>
                </property>
                <layout class="QGridLayout" name="gridLayout_SignalK_Paths">
@@ -633,7 +573,7 @@
                  <widget class="QLineEdit" name="lineEdit_SignalK_SOG"/>
                 </item>
                 <item row="8" column="0">
-                 <widget class="QLabel" name="label_SignalK_SOG">
+                 <widget class="QLabel" name="label_SignalK_BTW">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -730,6 +670,18 @@
              <property name="dragEnabled">
               <bool>true</bool>
              </property>
+             <property name="dragDropMode">
+              <enum>QAbstractItemView::InternalMove</enum>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="currentRow">
+              <number>-1</number>
+             </property>
             </widget>
            </item>
            <item>
@@ -741,6 +693,13 @@
               <widget class="QToolButton" name="toolButton_Up">
                <property name="text">
                 <string>/\</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="toolButton_Down">
+               <property name="text">
+                <string>\/</string>
                </property>
               </widget>
              </item>
@@ -759,11 +718,17 @@
               </widget>
              </item>
              <item>
-              <widget class="QToolButton" name="toolButton_Down">
-               <property name="text">
-                <string>\/</string>
+              <spacer name="horizontalSpacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
                </property>
-              </widget>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
              </item>
             </layout>
            </item>
@@ -778,25 +743,226 @@
             </sizepolicy>
            </property>
            <property name="title">
-            <string>Detail</string>
+            <string>Details</string>
            </property>
+           <layout class="QGridLayout" name="gridLayout_Apps_Details">
+            <item row="0" column="0">
+             <widget class="QScrollArea" name="scrollArea_Apps_Details">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="horizontalScrollBarPolicy">
+               <enum>Qt::ScrollBarAlwaysOff</enum>
+              </property>
+              <property name="widgetResizable">
+               <bool>true</bool>
+              </property>
+              <widget class="QWidget" name="scrollAreaWidgetContents_Apps_Details_Fields">
+               <property name="geometry">
+                <rect>
+                 <x>0</x>
+                 <y>0</y>
+                 <width>291</width>
+                 <height>384</height>
+                </rect>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_Apps_Details_Fieds">
+                <property name="horizontalSpacing">
+                 <number>-1</number>
+                </property>
+                <item row="0" column="1">
+                 <layout class="QHBoxLayout" name="horizontalLayout_Apps_Details_Fields_Icon">
+                  <item>
+                   <widget class="QLabel" name="label_Apps_Icon"/>
+                  </item>
+                  <item>
+                   <layout class="QGridLayout" name="gridLayout_Apps_Details_Fields_Icon_ReadOnly">
+                    <item row="3" column="1">
+                     <widget class="QLabel" name="label_Apps_Url_Text">
+                      <property name="text">
+                       <string/>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="6" column="1">
+                     <widget class="QLabel" name="label_Apps_Author_Text">
+                      <property name="text">
+                       <string/>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="5" column="0">
+                     <widget class="QLabel" name="label_Apps_License">
+                      <property name="text">
+                       <string>License</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="2" column="1">
+                     <widget class="QLabel" name="label_Apps_Version_Text">
+                      <property name="text">
+                       <string/>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="7" column="1">
+                     <widget class="QLabel" name="label_Apps_Vendor_Text">
+                      <property name="text">
+                       <string/>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="4" column="1">
+                     <widget class="QLabel" name="label_Apps_Copyright_Text">
+                      <property name="text">
+                       <string/>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="5" column="1">
+                     <widget class="QLabel" name="label_Apps_License_Text">
+                      <property name="text">
+                       <string/>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="6" column="0">
+                     <widget class="QLabel" name="label_Apps_Author">
+                      <property name="text">
+                       <string>Author</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="4" column="0">
+                     <widget class="QLabel" name="label_Apps_Copyright">
+                      <property name="text">
+                       <string>Copyright</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="2" column="0">
+                     <widget class="QLabel" name="label_Apps_Version">
+                      <property name="text">
+                       <string>Version</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="7" column="0">
+                     <widget class="QLabel" name="label_Apps_Vendor">
+                      <property name="text">
+                       <string>Vendor</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="3" column="0">
+                     <widget class="QLabel" name="label_Apps_Url">
+                      <property name="text">
+                       <string>URL</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </item>
+                <item row="10" column="0">
+                 <widget class="QLabel" name="label_Apps_AppIcon">
+                  <property name="text">
+                   <string>App Icon</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="9" column="1">
+                 <widget class="QLineEdit" name="lineEdit_Apps_DisplayName"/>
+                </item>
+                <item row="8" column="0">
+                 <widget class="QLabel" name="label_Apps_Description">
+                  <property name="text">
+                   <string>Description</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="10" column="1">
+                 <layout class="QGridLayout" name="gridLayout_Apps_Details_Fields_AppIcon">
+                  <item row="0" column="0">
+                   <widget class="QLineEdit" name="lineEdit_Apps_AppIcon">
+                    <property name="readOnly">
+                     <bool>true</bool>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="0" column="1">
+                   <widget class="QPushButton" name="pushButton_Apps_AppIcon_Browse">
+                    <property name="enabled">
+                     <bool>false</bool>
+                    </property>
+                    <property name="text">
+                     <string>Browse...</string>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item row="1" column="1">
+                 <widget class="QLineEdit" name="lineEdit_Apps_Name">
+                  <property name="readOnly">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item row="9" column="0">
+                 <widget class="QLabel" name="label_Apps_DisplayName">
+                  <property name="text">
+                   <string>Display Name</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QLabel" name="label_Apps_Name">
+                  <property name="text">
+                   <string>Name</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="8" column="1">
+                 <widget class="QLineEdit" name="lineEdit_Apps_Description">
+                  <property name="readOnly">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="0">
+                 <widget class="QPushButton" name="pushButton_Apps_EditSave">
+                  <property name="text">
+                   <string>Edit</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </widget>
+            </item>
+           </layout>
           </widget>
          </item>
         </layout>
        </widget>
       </widget>
      </item>
-     <item>
-      <widget class="QDialogButtonBox" name="buttonBox">
-       <property name="standardButtons">
-        <set>QDialogButtonBox::Discard|QDialogButtonBox::Reset|QDialogButtonBox::RestoreDefaults|QDialogButtonBox::Save</set>
-       </property>
-       <property name="centerButtons">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
     </layout>
+   </item>
+   <item row="1" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Discard|QDialogButtonBox::Reset|QDialogButtonBox::RestoreDefaults|QDialogButtonBox::Save</set>
+     </property>
+     <property name="centerButtons">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
